--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="wrap">
-		<div class="ugol1"></div>
-		<div class="rect"></div>
-		<div class="ugol2"></div>
+	<div class="content">
+		<div class="hexagon">
+			<div class="hexagon__i"></div>
+		</div>
 	</div>
-	
 </body>
 </html>
